# Modelica-ExternalLibrary

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  azure-pipelines.yml
.github/workflows/: build.yml
C/include/: ExternalLibrary.h
C/src/: ExternalLibraryCPP.cpp  ExternalLibraryPython.c
C/tests/: ExternalLibrary_test.cpp
ExternalLibrary/: ExternalLibraryFunctionExample.mo  ExternalLibraryObject.mo  ExternalLibraryObjectExample.mo  Internal.mo  LibraryFunction.mo  LibraryObject.mo  LibraryObjectExample.mo  PythonParams.mo  externalLibraryFunction.mo  package.mo  package.order
ExternalLibrary/Resources/Include/: ModelicaUtilityFunctions.h
Python/: pyproject.toml  setup.py
Python/external_library/: __init__.py
Python/src/external_library/: __init__.py
Python/tests/: test_external_library.py
rust/external_library/: Cargo.toml
rust/external_library/src/: lib.rs
rust/external_library_runner/: Cargo.toml
rust/external_library_runner/src/: main.rs
